--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,15 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+
+[profile.dev]
+opt-level = 1
+
+[profile.dev.package."*"]
+opt-level = 3
+
 [dependencies]
+bevy = { version = "0.7.0", features = ["dynamic"] }
+
+#[workspace]
+#resolver = "2" # Important! wgpu/Bevy needs this!
